# pattingalloang

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: case1_standard.txt  case2_high_resolution.txt  case3_long_trajectory.txt  case4_parameter_variation.txt  case5_multi_trajectory.txt  case6_butterfly_wings.txt  case7_chaotic_spiral.txt  case8_double_loop.txt
examples/: advanced_analysis.py  basic_usage.py
src/pattingalloang/: __init__.py  cli.py
src/pattingalloang/core/: __init__.py  attractor.py  integrator.py  metrics.py
src/pattingalloang/io/: __init__.py  config_manager.py  data_handler.py
src/pattingalloang/utils/: __init__.py  logger.py  timer.py
src/pattingalloang/visualization/: __init__.py  animator.py
tests/: __init__.py  conftest.py  test_core.py
