[tool.poetry]
name = "pattingalloang"
version = "0.0.2"
description = "JAX-Accelerated Aizawa Attractor Analysis with Comprehensive Chaos Metrics"
authors = ["Sandy H. S. Herho <sandy.herho@email.ucr.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sandyherho/pattingalloang"
repository = "https://github.com/sandyherho/pattingalloang"
keywords = ["chaos", "attractor", "dynamical-systems", "jax", "lyapunov", "nonlinear-dynamics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
packages = [{include = "pattingalloang", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.20.0"
scipy = ">=1.7.0"
matplotlib = ">=3.5.0"
pandas = ">=1.3.0"
netCDF4 = ">=1.5.0"
Pillow = ">=9.0.0"
tqdm = ">=4.60.0"
jax = ">=0.4.0"
jaxlib = ">=0.4.0"

[tool.poetry.group.dev.dependencies]
black = ">=22.0.0"
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"

[tool.poetry.scripts]
pattingalloang = "pattingalloang.cli:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
